--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
     "start-dev": "NODE_ENV=development webpack -w & NODE_ENV=development nodemon server.js",
     "test": "jest"
   },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/.c9"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
   "dependencies": {
     "es6-promise": "^4.2.4",
     "express": "^4.16.2",
@@ -22,12 +31,18 @@
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react-app": "^3.0.1",
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^23.5.0",
+    "jest-styled-components": "^5.0.1",
     "nodemon": "^1.11.0",
     "webpack": "3.10.0"
   }
