--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "NODE_ENV=production node server.js",
     "build": "NODE_ENV=production webpack --progress",
     "start-dev": "NODE_ENV=development webpack -w & NODE_ENV=development nodemon server.js",
-    "test": "jest --coverage"
+    "test": "jest"
   },
   "jest": {
     "testPathIgnorePatterns": [
